--- a/portfolio.html
+++ b/portfolio.html
@@ -54,8 +54,8 @@
               width="370"
               height="294"
             />
-            <h2 class=gallery-list-title">Технокряк</h2>
-            <p class=gallery-list-description">Веб-сайт</p>
+            <h2 class="gallery-list-title">Технокряк</h2>
+            <p class="gallery-list-description">Веб-сайт</p>
           </li>
           <li class="gallery-list">
             <img
@@ -64,11 +64,11 @@
               width="370"
               height="294"
             />
-            <h2 class="function-list-title">
+            <h2 class="gallery-list-title">
               Постер <span lang="en">New Orlean vs Golden Star</span>
             </h2>
 
-            <p class="function-list-description">Дизайн</p>
+            <p class="gallery-list-description">Дизайн</p>
           </li>
           <li>
             <img
@@ -77,10 +77,10 @@
               width="370"
               height="294"
             />
-            <h2 class="function-list-title">
+            <h2 class="gallery-list-title">
               Ресторан <span lang="en">Seafood</span>
             </h2>
-            <p class="function-list-description">Приложение</p>
+            <p class="gallery-list-description">Приложение</p>
           </li>
           <li>
             <img
@@ -89,10 +89,10 @@
               width="370"
               height="294"
             />
-            <h2 class=gallery-list-title">
+            <h2 class="gallery-list-title">
               Проект <span lang="en">Prime</span>
             </h2>
-            <p class=gallery-list-description">Дизайн</p>
+            <p class="gallery-list-description">Дизайн</p>
           </li>
           <li class="gallery-list">
             <img
@@ -101,10 +101,10 @@
               width="370"
               height="294"
             />
-            <h2 class=gallery-list-items-title">
+            <h2 class="gallery-list-title">
               Проект <span lang="en">Boxes</span>
             </h2>
-            <p class=gallery-list-items-description">Приложение</p>
+            <p class="gallery-list-description">Приложение</p>
           </li>
           <li>
             <img
@@ -113,10 +113,10 @@
               width="370"
               height="294"
             />
-            <h2 class=gallery-list-title" lang="en">
+            <h2 class="gallery-list-title" lang="en">
               Inspiration has no Borders
             </h2>
-            <p class=gallery-list-description">Веб-сайт</p>
+            <p class="gallery-list-description">Веб-сайт</p>
           </li>
           <li class="gallery-list">
             <img
@@ -125,10 +125,10 @@
               width="370"
               height="294"
             />
-            <h2 class="function-list-title">
+            <h2 class="gallery-list-title">
               Издание <span lang="en">Limited Edition</span>
             </h2>
-            <p class=gallery-list-description">Дизайн</p>
+            <p class="gallery-list-description">Дизайн</p>
           </li>
           <li>
             <img
@@ -137,10 +137,10 @@
               width="370"
               height="294"
             />
-            <h2 class=gallery-list-title">
+            <h2 class="gallery-list-title">
               Проект <abbr lang="en" title="LAB">LAB</abbr>
             </h2>
-            <p class=gallery-list-description">Маркетинг</p>
+            <p class="gallery-list-description">Маркетинг</p>
           </li>
           <li class="gallery-list">
             <img
@@ -149,10 +149,10 @@
               width="370"
               height="294"
             />
-            <h2 class=gallery-list-title" lang="en">
+            <h2 class="gallery-list-title" lang="en">
               Growing Business
             </h2>
-            <p class=gallery-list-description">Приложение</p>
+            <p class="gallery-list-description">Приложение</p>
           </li>
         </ul>
       </section>
