--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     
   </head>
 
-  <body>
+  <body> 
+    <div class="container">
+      
     <!-- Меню навигации -->
     <header class="header">
       <nav class="header-navigation">
@@ -45,7 +47,7 @@
         <div class="button-order"><button class="hero-button" type="button">Заказать услугу</button></div> 
       </section>
 
-      <!-- Секции услуг -->
+      <!-- Секция услуг -->
 
       <section class="services">
         <h2 hidden>Услуги</h2>
@@ -186,5 +188,5 @@
      </ul>
     </section>
     </footer>
-  </body>
+  </div></body>
 </html>
