section and container

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     
 
   </head>
-  <body> <div class="container">
+  <body>
     <!-- Меню навигации -->
     <header class="header">
       <nav class="header-navigation">
@@ -175,5 +175,5 @@
         
       </section>
     </footer>
-  </div> </body>
+  </body>
 </html>
