--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,13 @@
 
   </head>
   <body>
+
+
     <!-- Меню навигации -->
+
     <header class="header">
-      <nav class="header-navigation">
+      <div  class="main-header container">
+      <nav class="main-nav  ">
         <a class="header-logo link"  href=""> Web<span class="header-logo-st link" >Studio</span> 
         <ul class="header-nav list">
           <li class="header-nav-item" ><a class="header-nav-link  link  " href="./index.html">Студия</a></li>
@@ -24,7 +28,7 @@
           <li class="header-nav-item"><a class="header-nav-link link" href="">Контакты</a></li>
         </ul>
       </nav>
-
+      <div class="container">
       <ul class="address list">
         <!--Ссылка на адрес електронной пошти-->
         <li class="address-item">
@@ -34,146 +38,199 @@
         <!--Ссылка на телефонный номер-->
         <li class="address-item"><a class="address-link link" href="tel:+380961111111">+380961111111</a></li>
       </ul>
+      </div>
+    </div>
     </header>
+
+
+    <!-- Герой -->
     <main>
+      <div class="container">
       <section class="section">
         <!--Фильтр в герое-->
         <ul class="filter list">
-          <li class="filter-button-item "><button class="button-filter current" type="button">Все</button></li> 
-          <li class="filter-button-item "><button class="button-filter" type="button">Веб-сайты</button></li>
-          <li class="filter-button-item "><button class="button-filter" type="button">Приложения</button></li>
-          <li class="filter-button-item "><button class="button-filter" type="button">Дизайн</button></li>
-          <li class="filter-button-item "><button class="button-filter" type="button">Маркетинг</button></li>
+          <li class="filter-button-item "><button class="button-filter current all" type="button">Все</button></li> 
+          <li class="filter-button-item "><button class="button-filter web-sites" type="button">Веб-сайты</button></li>
+          <li class="filter-button-item "><button class="button-filter aplication" type="button">Приложения</button></li>
+          <li class="filter-button-item "><button class="button-filter design" type="button">Дизайн</button></li>
+          <li class="filter-button-item "><button class="button-filter marketing" type="button">Маркетинг</button></li>
         </ul>
         <!--Список функций сайта с картинками-->
         <ul class="gallery list">
           <li class="gallery-list">
+            <article class="card">
+              <div class="card-thumb">
             <img
               src="./img/Portfolio-img/img-1.jpg"
               alt="Как виглядит веб-страница на ноутбуке "
               width="370"
               height="294"
-            />
+            /></div>
+            <div class="card-content">
             <h2 class="gallery-list-title">Технокряк</h2>
             <p class="gallery-list-description">Веб-сайт</p>
-          </li>
+          </div>
+        </article>
+      </li>
           <li class="gallery-list">
+            <article class="card">
+              <div class="card-thumb">
             <img
               src="./img/Portfolio-img/img-2.jpg"
               alt="Постер Новый Орлеан и Голден Стар"
               width="370"
               height="294"
-            />
+            /></div>
+            <div class="card-content">
             <h2 class="gallery-list-title">
               Постер <span lang="en">New Orlean vs Golden Star</span>
             </h2>
 
             <p class="gallery-list-description">Дизайн</p>
-          </li>
-          <li>
+          </div>
+        </article>
+      </li>
+          <li class="gallery-list">
+            <article class="card">
+              <div class="card-thumb">
             <img
               src="./img/Portfolio-img/img-3.jpg"
               alt="Логотип ресторана  морепродуктов"
               width="370"
               height="294"
-            />
+            /></div>
+            <div class="card-content">
             <h2 class="gallery-list-title">
               Ресторан <span lang="en">Seafood</span>
             </h2>
             <p class="gallery-list-description">Приложение</p>
-          </li>
-          <li>
+          </div>
+        </article>
+      </li>
+          <li class="gallery-list">
+            <article class="card">
+              <div class="card-thumb">
             <img
               src="./img/Portfolio-img/img-4.jpg"
               alt="Наушники"
               width="370"
               height="294"
-            />
+            /></div>
+            <div class="card-content">
             <h2 class="gallery-list-title">
               Проект <span lang="en">Prime</span>
             </h2>
             <p class="gallery-list-description">Дизайн</p>
-          </li>
+          </div>
+        </article>
+      </li>
           <li class="gallery-list">
+            <article class="card">
+              <div class="card-thumb">
             <img
               src="./img/Portfolio-img/img-5.jpg"
               alt="Коробки"
               width="370"
               height="294"
-            />
+            /></div>
+            <div class="card-content">
             <h2 class="gallery-list-title">
               Проект <span lang="en">Boxes</span>
             </h2>
             <p class="gallery-list-description">Приложение</p>
-          </li>
-          <li>
+          </div>
+        </article>
+      </li>
+          <li class="gallery-list">
+            <article class="card">
+              <div class="card-thumb">
             <img
               src="./img/Portfolio-img/img-6.jpg"
               alt="Экран с изображением карты"
               width="370"
               height="294"
-            />
+            /></div>
+            <div class="card-content">
             <h2 class="gallery-list-title" lang="en">
               Inspiration has no Borders
             </h2>
             <p class="gallery-list-description">Веб-сайт</p>
-          </li>
+          </div>
+        </article>
+      </li>
           <li class="gallery-list">
+            <article class="card">
+              <div class="card-thumb">
             <img
               src="./img/Portfolio-img/img-7.jpg"
               alt="Журнал-издание"
               width="370"
               height="294"
-            />
+            /></div>
+            <div class="card-content">
             <h2 class="gallery-list-title">
               Издание <span lang="en">Limited Edition</span>
             </h2>
             <p class="gallery-list-description">Дизайн</p>
-          </li>
-          <li>
+          </div>
+        </article>
+      </li>
+          <li class="gallery-list">
+            <article class="card">
+              <div class="card-thumb">
             <img
               src="./img/Portfolio-img/img-8.jpg"
               alt="Лейба"
               width="370"
               height="294"
-            />
+            /></div>
+            <div class="card-content">
             <h2 class="gallery-list-title">
               Проект <abbr lang="en" title="LAB">LAB</abbr>
             </h2>
             <p class="gallery-list-description">Маркетинг</p>
-          </li>
+          </div>
+        </article>
+      </li>
           <li class="gallery-list">
+            <article class="card">
+              <div class="card-thumb">
             <img
               src="./img/Portfolio-img/img-9.jpg"
               alt="Розробка приложения для бизнеса"
               width="370"
               height="294"
-            />
+            /></div>
+            <div class="card-content">
             <h2 class="gallery-list-title" lang="en">
               Growing Business
             </h2>
             <p class="gallery-list-description">Приложение</p>
-          </li>
+          </div>
+        </article>
+      </li>
         </ul>
       </section>
+    </div>
     </main>
-    <footer>
+    <footer class="container">
+      <div class="footer-section">
       <section class="contacts">
         <h2 hidden>Наши контакты</h2>
         <a class="logo link" href=""> Web<span class="logo-studio-footer">Studio</span> </a>
-        <ul  class="list" >      
-          <li><a class="studio-location link"
+        <ul  class="address-footer list" >      
+          <li class="footer-contacts"><a class="studio-location link"
             href="https://goo.gl/maps/Y9wyzisQfnfLE8UF7"
             target="_blank"
             rel="noopener noreferrer"
             >г. Киев, пр-т Леси Украинки, 26</a
           ></li>    
-          <li><a class="address-link-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
+          <li class="footer-contacts"><a class="address-link-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
 
-         <li><a class="address-link-footer link" href="tel:+380961111111">+380961111111</a></ul></li> 
-
-        
+         <li class="footer-contacts"><a class="address-link-footer link" href="tel:+380961111111">+380961111111</a></ul></li> 
+        </ul>
       </section>
+      </div>
     </footer>
-  </body>
-</html>
+    </body>
+  </html>
