--- a/index.html
+++ b/index.html
@@ -19,19 +19,18 @@
     <!-- Меню навигации -->
     
     <header class="header">
-      <div class=" container ">
-        <div class="header-container">
+      <div class="header-container container">
        <nav class="main-nav"> 
         <a class="header-logo link"  href=""> Web<span class="header-logo-st link" >Studio</span> 
-        <ul class="header-nav list">
-          <li class="header-nav-item"><a class="header-nav-link link current" href="./index.html">Студия</a></li>
+        <ul class="header-nav">
+          <li class="header-nav-item"><a class="header-nav-link link current" href="/index.html">Студия</a></li>
           <li class="header-nav-item"><a class="header-nav-link link" href="./portfolio.html ">Портфолио</a></li>
           <li class="header-nav-item"><a class="header-nav-link link" href="">Контакты</a></li>
         </ul> 
       </nav>
 
         <!--Ссылка на адрес електронной пошти-->
-        <ul class="address  list">
+        <ul class="address ">
           <li class="address-item">
             <a class="address-link link" lang="en" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
@@ -39,14 +38,13 @@
           <li class="address-item"><a class="address-link link" href="tel:+380961111111">+380961111111</a></li>
         </ul>
       </div>
-     </div>
     </header>
   
  
 
     <!-- Герой -->
     <main>
-       <section class="section hero">
+       <section class=" hero">
       <div class="container">
       
         <h1 class="hero-title">
@@ -61,7 +59,7 @@
       <section class="section">
       <div class="container">
         <h2 class="hidden-title">Услуги</h2>
-        <ul class="services-item list">
+        <ul class="services-item">
           <li class="services-list">
             <h3 class="main-services">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
             <p class="main-services-duty">
@@ -97,10 +95,10 @@
        </div>
        </section>
       <!-- Чем занимаеться студия -->
-      <section class="section">
+      <section class="section work-section">
       <div class="container">
         <h2 class="works-title">Чем мы занимаемся</h2>
-        <ul class="works-list list">
+        <ul class="works-list">
           <li class="image-of-studio-duty">
             <img
               src="./img/img1.jpg"
@@ -209,7 +207,7 @@
       <div class="container">
        <a class="logo link"  href=""> Web<span class="logo-studio-footer link" >Studio</span> 
      <address> 
-       <ul class="address-footer list">
+       <ul class="address-footer">
         <li class="footer-contacts"><a class="studio-location link"
           href="https://goo.gl/maps/8hY23HAekC6FVMTa9"
           target="_blank"
