--- a/portfolio.html
+++ b/portfolio.html
@@ -23,14 +23,14 @@
       
       <nav class="main-nav  ">
         <a class="header-logo link"  href=""> Web<span class="header-logo-st link" >Studio</span> 
-        <ul class="header-nav list">
+        <ul class="header-nav">
           <li class="header-nav-item" ><a class="header-nav-link  link  " href="./index.html">Студия</a></li>
           <li class="header-nav-item" ><a class="header-nav-link  link  current"  href ="./portfolio.html">Портфолио</a></li>
           <li class="header-nav-item"><a class="header-nav-link link" href="">Контакты</a></li>
         </ul>
       </nav>
       <div class="header-container container">
-      <ul class="address list">
+      <ul class="address">
         <!--Ссылка на адрес електронной пошти-->
         <li class="address-item">
           <a class="address-link link" href="mailto:info@devstudio.com"
@@ -51,7 +51,7 @@
       
         <!--Фильтр в герое-->
         <h1 class="hidden-title">Основная информация</h1>
-        <ul class="filter list">
+        <ul class="filter">
           <li class="filter-item "><button class="button-filter  all" type="button">Все</button></li> 
           <li class="filter-item "><button class="button-filter web-sites" type="button">Веб-сайты</button></li>
           <li class="filter-item "><button class="button-filter aplication" type="button">Приложения</button></li>
@@ -59,7 +59,7 @@
           <li class="filter-item "><button class="button-filter marketing" type="button">Маркетинг</button></li>
         </ul>
         <!--Список функций сайта с картинками-->
-        <ul class="gallery list">
+        <ul class="gallery ">
           <li class="gallery-list">
             <article class="card">
               <a href="">
@@ -240,7 +240,7 @@
        <h2 class="hidden-title">Наши контакты</h2>
         <a class="logo link" href=""> Web<span class="logo-studio-footer">Studio</span> </a>
        <address> 
-         <ul  class="address-footer list" >      
+         <ul  class="address-footer" >      
           <li class="footer-contacts"><a class="studio-location link"
             href="https://goo.gl/maps/Y9wyzisQfnfLE8UF7"
             target="_blank"
